Avoid horizontal scroll bar for embedded videos (#3115)

--- a/css/base.css
+++ b/css/base.css
@@ -374,3 +374,7 @@ font-size: 95%;
 margin-left:.8em;
 margin-right:.8em;
 }
+
+.example video {
+    max-width: 100%;
+}
